Fix modal header overlapping the border
On mobile the modal’s header was overlapping the modal border

--- a/packages/components/src/modal/style.scss
+++ b/packages/components/src/modal/style.scss
@@ -63,7 +63,7 @@
 	align-items: stretch;
 	justify-content: space-between;
 	position: fixed;
-	top: 0;
+	top: $border-width;
 	background: $white;
 	width: calc(100% - #{$panel-padding + $panel-padding});
 	height: $header-height;
